//
// Generated by chaintool.  DO NOT EDIT!!
//

syntax = "proto3";

package org.hyperledger.chaincode.example02;

message BalanceResult {
         int32 balance = 1; 
}

message Entity {
         string id = 1; 
}

message PaymentParams {
         string partySrc = 1; 
         string partyDst = 2; 
         int32 amount = 3; 
}


//
// Available RPC functions exported by this interface
//
// void MakePayment(PaymentParams) -> org.hyperledger.chaincode.example02/txn/1 
// void DeleteAccount(Entity) -> org.hyperledger.chaincode.example02/txn/2 
// BalanceResult CheckBalance(Entity) -> org.hyperledger.chaincode.example02/query/1 
